WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
264624
Deploy more smart pointers in AbortSignal.cpp, BroadcastChannel.cpp, NodeRareData.h, and Range.cpp
https://bugs.webkit.org/show_bug.cgi?id=264624
Summary
Deploy more smart pointers in AbortSignal.cpp, BroadcastChannel.cpp, NodeRare...
Ryosuke Niwa
Reported
2023-11-10 14:45:59 PST
Deploy more smart pointers in the following files: Source/WebCore/dom/AbortSignal.cpp Source/WebCore/dom/BroadcastChannel.cpp Source/WebCore/dom/NodeRareData.h Source/WebCore/dom/Range.cpp
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2023-11-10 14:50:17 PST
Pull request:
https://github.com/WebKit/WebKit/pull/20336
EWS
Comment 2
2023-11-10 19:38:45 PST
Committed
270578@main
(97f82b70814b): <
https://commits.webkit.org/270578@main
> Reviewed commits have been landed. Closing PR #20336 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-11-10 19:40:18 PST
<
rdar://problem/118261882
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug