Deploy more smart pointers in AbortSignal.cpp, BroadcastChannel.cpp, NodeRareData.h, and Range.cpp https://bugs.webkit.org/show_bug.cgi?id=264624

Reviewed by Chris Dumez.

Deploy smart pointers as warned by the clang static analyzer.

* Source/WebCore/dom/AbortSignal.cpp:
(WebCore::AbortSignal::throwIfAborted):
* Source/WebCore/dom/BroadcastChannel.cpp:
(WebCore::BroadcastChannel::MainThreadBridge::MainThreadBridge):
* Source/WebCore/dom/NodeRareData.h:
(WebCore::NodeListsNodeData::removeChildNodeList):
(WebCore::NodeListsNodeData::removeEmptyChildNodeList):
* Source/WebCore/dom/Range.cpp:
(WebCore::Range::processContents):
(WebCore::Range::surroundContents):
(WebCore::boundaryTextNodesSplit):

Canonical link: https://commits.webkit.org/270578@main